# hydrocivil

./: .slope_43216  .tmp.slope.tif  BasinDelination.ipynb  LICENSE  MANIFEST.in  README.md  __init__.py  dem_preprocess.ipynb  download_OpenTopo.py  hydrocivil.yml  infiltration.py  log.txt  misc.md  pyproject.toml  rain.py  sdh_DGA-methods.ipynb  sdh_PostProcess.ipynb  sdh_event-based.ipynb  sdh_rational-method.ipynb  sdh_unithydrographs.ipynb  setup.py
data/: .gitignore  DGA-AC_params.csv  parameters.csv  params.csv  params.xlsx  synthethic_storms.csv
data/AT1/: Cuenca_RioGomez_v0.dbf  Cuenca_RioGomez_v0.shx  LULCZhao2016_RioGomez_v0.tif  rnetwork_RioGomez_v0.dbf  rnetwork_RioGomez_v0.shp
data/vector/: REGIONES_CHILE.dbf  REGIONES_CHILE.shx  REGIONES_v3.dbf  REGIONES_v3.shp  REGIONES_v3.shx
notebooks/: .gitignore  querydem.ipynb  sdh_PostProcess.ipynb  sdh_rational-method.ipynb  sdh_unithydrographs.ipynb
notebooks/Geomorphometric_Analysis/: BasinDelineation.ipynb  Geomorphology.ipynb  README.md  querydem.ipynb
notebooks/RationalMethod/: QRational_Summary.xlsx  README.md  params.xlsx  sdh_rational-method.ipynb
src/: __init__.py  downloads.py  geomorphology.py  infiltration.py  misc.py  rain.py  unithydrographs.py  watersheds.py  zones_dga.py
src/hydrocivil/: __init__.py  abstractions.py  channels.py  geomorphology.py  global_vars.py  graphical.py  misc.py  rain.py  reservoirs.py  resources.py  soil.py  surface.py  unithydrographs.py  watersheds.py  wb_tools.py  web.py
utils/: geomorphology.py  infiltration.py  misc.py
web/: .downloads.py.swp  __init__.py
(+82 files in other folders)
