[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrocivil"
version = "1.0.4"
authors = [
  { name="Lucas Glasner", email="lgvivanco96@gmail.com" },
]
description = "a package for hydrological methods in civil and enviromental engineering"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "pyproj",
    "ipykernel",
    "xarray",
    "shapely",
    "geopandas",
    "rasterio",
    "rioxarray",
    "networkx",
    "ipykernel>=6.29.5",
]

readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
dev = [
    "whitebox_workflows",
]

[project.urls]
Homepage = "https://github.com/lucasglasner/hydrocivil"
Issues = "https://github.com/lucasglasner/hydrocivil/issues"